--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:18:23=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==14:20:14=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1814.35</p>
+                <p id="net-worth">1805.10</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+94.75</p>
+                <p id="realized-pl-value">+97.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-352.50</p>
+                <p id="unrealized-pl-value">-364.50</p>
             </div>
         </div>
     </header>
@@ -113,18 +113,18 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 BuyLimit: 17572.75
--Closed Order-
+BuyLimit: 5052.0
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:3.5</h2>
--Closed Order-
+            <h2 id="column2-title">MNQM24==P/L:-2.0</h2>
+BuyLimit: 5052.0
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:2.5</h2>
--Closed Order-
+            <h2 id="column3-title">MESM24</h2>
+BuyLimit: 5052.0
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-362.0</h2>
+            <h2 id="column4-title">M2KM24==P/L:-358.0</h2>
 
         </div>
         <div class="column">
