--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:22:10=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==14:24:02=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1832.60</p>
+                <p id="net-worth">1839.60</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+97.00</p>
+                <p id="realized-pl-value">+125.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-336.50</p>
+                <p id="unrealized-pl-value">-357.50</p>
             </div>
         </div>
     </header>
@@ -111,24 +111,25 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:21.0</h2>
--Closed Order-
+            <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17572.75
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 BuyLimit: 5052.0
+-Closed Order-
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-355.5</h2>
+            <h2 id="column3-title">MESM24==P/L:2.5</h2>
+-Closed Order-
+        </div>
+        <div class="column">
+            <h2 id="column4-title">M2KM24==P/L:-357.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
+            <h2 id="column5-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
