--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==14:45:58=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==14:47:46=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1801.10</p>
+                <p id="net-worth">1773.10</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+131.75</p>
+                <p id="realized-pl-value">+132.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-402.75</p>
+                <p id="unrealized-pl-value">-431.50</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-32.5</h2>
--Closed Order-
+            <h2 id="column1-title">MNQM24==P/L:-49.5</h2>
+
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:1.25</h2>
--Closed Order-
+            <h2 id="column2-title">MESM24</h2>
+
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-378.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-376.0</h2>
 
         </div>
         <div class="column">
