--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:13:22=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:15:26=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1863.60</p>
+                <p id="net-worth">1875.35</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+161.00</p>
+                <p id="realized-pl-value">+168.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-369.50</p>
+                <p id="unrealized-pl-value">-364.75</p>
             </div>
         </div>
     </header>
@@ -116,24 +116,24 @@ BuyLimit: 17570.75
 -Closed Order-
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:4.0</h2>
+            <h2 id="column2-title">MNQM24==P/L:3.5</h2>
 -Closed Order-
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24</h2>
-BuyLimit: 5051.5
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MESM24==P/L:-1.25</h2>
+            <h2 id="column3-title">MESM24==P/L:-1.25</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">M2KM24==P/L:-367.0</h2>
+            <h2 id="column4-title">M2KM24==P/L:-364.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column6-title">MCLK24</h2>
+            <h2 id="column5-title">MCLK24</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
+            <p id="stocks-content-6d">{{stocks-content-6}}</p>
         </div>
         <div class="column">
             <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
