--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:19:17=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==15:21:12=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1850.85</p>
+                <p id="net-worth">1846.60</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+170.50</p>
+                <p id="realized-pl-value">+170.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-391.75</p>
+                <p id="unrealized-pl-value">-395.50</p>
             </div>
         </div>
     </header>
@@ -111,24 +111,24 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24</h2>
-BuyLimit: 17570.75
-        </div>
-        <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:-1.5</h2>
+            <h2 id="column1-title">MNQM24==P/L:-20.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-11.25</h2>
+            <h2 id="column2-title">MESM24==P/L:-10.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-376.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-375.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">MCLK24</h2>
+            <h2 id="column4-title">MCLK24</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
