--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:37:57=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:39:52=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1893.10</p>
+                <p id="net-worth">1899.60</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+182.00</p>
+                <p id="realized-pl-value">+191.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-361.00</p>
+                <p id="unrealized-pl-value">-364.00</p>
             </div>
         </div>
     </header>
@@ -113,18 +113,18 @@
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
 BuyLimit: 17570.75
--Closed Order-
+BuyLimit: 5051.5
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24==P/L:6.5</h2>
--Closed Order-
+            <h2 id="column2-title">MNQM24==P/L:-8.5</h2>
+BuyLimit: 5051.5
         </div>
         <div class="column">
             <h2 id="column3-title">MESM24</h2>
 BuyLimit: 5051.5
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-361.0</h2>
+            <h2 id="column4-title">M2KM24==P/L:-359.0</h2>
 
         </div>
         <div class="column">
