--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==15:41:49=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:43:39=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1906.60</p>
+                <p id="net-worth">1909.10</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+191.00</p>
+                <p id="realized-pl-value">+194.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-356.50</p>
+                <p id="unrealized-pl-value">-357.00</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:5.5</h2>
--Closed Order-
+            <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17570.75
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 BuyLimit: 5051.5
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-360.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-355.0</h2>
 
         </div>
         <div class="column">
